[tool.poetry]
name = "supreme-enignma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
sqlalchemy = "1.3.17"
jinja2 = "^2.11.2"
yfinance = "^0.1.54"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
